Implement intent-ir canonicalization and hashing boundary